# haskell_web_memo

./: LICENSE  README.md
18.Yesod/: Main.hs  README.md  index.julius.js  package.yaml  routes  stack.yaml  yesod-p5.cabal
20.Scotty/: Main.hs  README.md  hello-scotty.cabal  package.yaml
29.Spock/: Main.hs  README.md  hello-spock.cabal  package.yaml
50.Warp/: Main.hs  README.md  hello-warp.cabal  index.html  package.yaml
80.Happstack-lite/: Main.hs  README.md  hello-happstack-lite.cabal  package.yaml  stack.yaml
81.Happstack-lite2/: Main.hs  README.md  happstack-lite-post.cabal  package.yaml  stack.yaml
81.Happstack-lite2/static/: index.html  sketch.js
