name:               yesod-p5
version:            0.0.0
cabal-version:      >= 1.20
build-type:         Simple
extra-source-files: routes

executable          yesod-p5
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , yesod-core
                  , shakespeare
  default-extensions: OverloadedStrings
                    , TemplateHaskell
                    , TypeFamilies
                    , ViewPatterns
                    , QuasiQuotes