name:          hello-spock
version:       1.0.0
cabal-version: >= 1.20
build-type:    Simple

executable          hello-spock
    default-language:   Haskell2010
    main-is:            Main.hs
    default-extensions: OverloadedStrings
    build-depends:      base
                      , Spock
                      , text
                      , mtl