name:          hello-warp
version:       1.0.0
cabal-version: >= 1.10
build-type:    Simple

executable hello-warp
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , http-types
                     , warp
