name:          hello-happstack-lite
version:       1.0.0
cabal-version: >= 1.20
build-type:    Simple

executable              hello-happstack-lite
    default-language:   Haskell2010
    main-is:            Main.hs
    default-extensions: OverloadedStrings, ScopedTypeVariables
    build-depends:      base
                      , happstack-lite
                      , text
                      , blaze-html