name:          happstack-lite-post
version:       1.0.0
cabal-version: >= 1.20
build-type:    Simple

executable          happstack-lite-post
    default-language:   Haskell2010
    main-is:            Main.hs
    default-extensions: OverloadedStrings, ScopedTypeVariables    
    build-depends:      base
                      , happstack-lite
                      , text
